--- a/WeatherApp/src/index.css
+++ b/WeatherApp/src/index.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     background-color: #1a1a1a;
     color: white;
-    
+    overflow-y: hidden;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
